Fixed Footer alignment issue for login page.

--- a/client/src/containers/authenticate/index.css
+++ b/client/src/containers/authenticate/index.css
@@ -20,6 +20,10 @@
   font-size: 32px;
 }
 
+.logInPageContainer{
+  min-height: calc(100vh - 60px);
+}
+
 .logInHeader {
   font-family: 'Arimo-Regular';
   font-weight: 300;
